--- a/package.json
+++ b/package.json
@@ -13,45 +13,58 @@
       "name": "Jimmy Wang"
     }
   ],
+  "engines": {
+    "node": "7.4.0"
+  },
   "bin": {
     "exact": "node_modules/exact-cli/index.js"
   },
   "scripts": {
+    "validate": "check-node-version --node '>= 6.7.0'",
+    "setup": "./bin/setup",
+    "prep": "npm run validate && npm run setup",
+    "postinstall": "npm run prep",
     "build": "webpack",
-    "build-watch": "webpack -w",
-    "start": "nodemon --watch server -e js,html server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "cli-init": "PATH=$(npm bin):$PATH exact && alias npm-exec=\"PATH=$(npm bin):$PATH\" && alias exact=\"npm-exec exact\"",
-    "db-init": "./db-init.sh",
-    "postinstall": "npm run db-init && npm run cli-init"
+    "build-watch": "npm run build -- -w",
+    "build-dev": "cross-env NODE_ENV=development npm run build-watch",
+    "build-branch": "bin/build-branch.sh",
+    "start": "node server/start.js",
+    "start-watch": "nodemon server/start.js --watch server --watch db",
+    "start-dev": "cross-env NODE_ENV=development npm run start-watch",
+    "dev": "cross-env NODE_ENV=development concurrently --kill-others --prefix \"[{name}]\" --names \"BUILD,SERVE\" -c \"bgBlue.bold.black,bgGreen.bold.black\" \"npm run build-dev\" \"npm run start-dev\"",
+    "test": "mocha --compilers js:babel-register app/**/*.test.js app/**/*.test.jsx db/**/*.test.js server/**/*.test.js",
+    "test-watch": "npm run test -- --watch",
+    "seed": "node db/seed.js",
+    "deploy-heroku": "bin/deploy-heroku.sh"
   },
   "license": "ISC",
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.23.0",
-    "bluebird": "^3.4.6",
+    "axios": "^0.15.2",
+    "babel-preset-stage-2": "^6.18.0",
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
+    "chai-enzyme": "^0.5.2",
+    "chalk": "^1.1.3",
+    "check-node-version": "^1.1.2",
     "classnames": "^2.2.5",
-    "css-loader": "^0.26.1",
-    "d3": "^4.7.2",
-    "d3-force": "^1.0.6",
-    "d3-scale": "^1.0.5",
-    "d3-scale-chromatic": "^1.1.1",
-    "d3-selection": "^1.0.5",
-    "exact-cli": "0.0.3",
+    "concurrently": "^3.1.0",
+    "cookie-session": "^2.0.0-alpha.1",
+    "css-loader": "^0.26.4",
+    "enzyme": "^2.5.1",
     "express": "^4.14.0",
     "file-loader": "^0.10.1",
+    "finalhandler": "^1.0.0",
     "lodash": "^4.17.2",
     "node-sass": "^4.5.0",
-    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-github2": "^0.1.10",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "pg-native": "^1.10.0",
+    "pretty-error": "^2.0.2",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-burger-menu": "^1.10.14",
@@ -61,17 +74,31 @@
     "react-scroll": "^1.4.4",
     "redux": "^3.6.0",
     "redux-burger-menu": "^0.1.0",
+    "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^4.1.1",
     "sequelize": "^3.30.2",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "styled-jsx": "^0.5.7",
     "url-loader": "^0.5.8",
-    "volleyball": "^1.4.1",
-    "webpack": "^1.13.3"
+    "volleyball": "^1.4.1"
   },
   "devDependencies": {
-    "exact-cli": "0.0.3"
+    "babel": "^6.5.2",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
+    "cross-env": "^3.1.4",
+    "mocha": "^3.1.2",
+    "nodemon": "^1.11.0",
+    "supertest": "^3.0.0",
+    "volleyball": "^1.4.1",
+    "webpack": "^2.2.1",
+    "webpack-livereload-plugin": "^0.10.0"
   }
 }
